Istio-IngresGateway-validator/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: validator
spec:
  replicas: 2 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: validator
    spec:
      containers:
      - name: validator
        image: nitinsingh01/val-uid:v1
        ports:
        - containerPort: 8080
