Istio-IngresGateway-validator/service.yml
apiVersion: v1
kind: Service
metadata:
  name: validator
  labels:
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: validator
